[metadata]
name = monasca-api

summary = OpenStack Monitoring as a Service
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://github.com/openstack/monasca-api
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    monasca_api
    monasca_tempest_tests

data_files =
    /etc/monasca =
        etc/api-config.conf
        etc/api-logging.conf
        etc/api-config.ini

[entry_points]
console_scripts =
    monasca-api = monasca_api.api.server:launch

tempest.test_plugins =
    monasca_tests = monasca_tempest_tests.plugin:MonascaTempestPlugin

[pbr]
warnerrors = True
