[metadata]
name = monasca-api

summary = OpenStack Monitoring as a Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://github.com/openstack/monasca-api
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    monasca_api

data_files =
    /etc/monasca =
        etc/api-logging.conf
        etc/api-config.ini

[extras]
influxdb =
  influxdb>=2.9.2 # MIT
cassandra =
  cassandra-driver!=3.6.0,>=3.3.0 # Apache-2.0

[entry_points]
console_scripts =
    monasca-api = monasca_api.api.server:launch

wsgi_scripts =
    monasca-api-wsgi = monasca_api.api.wsgi:main

oslo.config.opts =
    monasca_api = monasca_api.conf:list_opts

oslo.policy.policies =
    monasca_api = monasca_api.policies:list_rules

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[build_apiref]
all_files = 1
build-dir = api-ref/build
source-dir = api-ref/source

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1

[pbr]
autodoc_index_modules = True
autodoc_exclude_modules =
  monasca_api.api.wsgi*
  monasca_api.conf.*
  monasca_api.tests.*
  monasca_tempest_tests.*
api_doc_dir = contributor/api
