[metadata]
name = monasca-api

summary = OpenStack Monitoring as a Service
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/monasca-api/latest/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    monasca_api

data_files =
    /etc/monasca =
        etc/api-logging.conf
        etc/api-config.ini

[extras]
influxdb =
  influxdb>=2.9.2 # MIT
cassandra =
  cassandra-driver!=3.6.0,>=3.3.0 # Apache-2.0

[entry_points]
console_scripts =
    monasca-api = monasca_api.api.server:launch
    monasca_db = monasca_api.cmd.monasca_db:main
    monasca-status = monasca_api.cmd.status:main

wsgi_scripts =
    monasca-api-wsgi = monasca_api.api.wsgi:main

oslo.config.opts =
    monasca_api = monasca_api.conf:list_opts

oslo.policy.policies =
    monasca_api = monasca_api.policies:list_rules

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[pbr]
autodoc_index_modules = True
autodoc_exclude_modules =
  monasca_api.api.wsgi*
  monasca_api.conf.*
  monasca_api.tests.*
  monasca_tempest_tests.*
api_doc_dir = contributor/api

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1
